--- a/backend/package.json
+++ b/backend/package.json
@@ -5,5 +5,11 @@
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "pg-promise": "^10.11.1"
+  },
+
+  "scripts": {
+    "start": "node server.js",
+    "db:seed": "psql -U postgres -f db/seed.sql",
+    "db:init": "psql -U postgres -f db/schema.sql"
   }
 }
